# zillow-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: debug_scrapfly.py
src/zillow_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  exceptions.py  fetcher.py  logging.py  mock.py  models.py  normalizer.py  parsers.py
src/zillow_agent/strategies/: __init__.py  base.py  scrapfly_strategy.py
tests/: conftest.py  test_agent.py  test_normalizer.py  test_strategies.py
tests/fixtures/: next_data_detail.json  next_data_search.json  property_page.html
