[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zillow-agent"
version = "0.1.0"
description = "Production-grade Python agent for fetching Zillow Zestimates"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "tenacity>=8.0,<10.0",
    "structlog>=24.0",
    "typer>=0.12,<1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "anthropic>=0.40",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
zestimate = "zillow_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/zillow_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that hit real Zillow (deselect with '-m \"not live\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
